# aoc_rust_template

./: Cargo.toml  README.md
benches/: bench.rs
proc_macro_aoc/: Cargo.toml
proc_macro_aoc/src/: lib.rs
proc_macro_days/: Cargo.toml
proc_macro_days/src/: lib.rs
proc_macro_lib/: Cargo.toml
proc_macro_lib/src/: lib.rs
src/: day.rs  day1.rs  day3.rs  day4.rs  example-2019-day1.rs  main.rs  main_fast.rs  utils.rs
tests/: tests.rs
