[package]
name = "aoc_rust_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

publish = false
default-run = "default"

# Can be used to compile the binaries more explicitly
# For example to point at specific folder.
# Multiple binaries can exist here, and even alongside libraries.
[[bin]]
name = "default"
path = "src/main.rs"

[[bin]]
name = "fast"
path = "src/main_fast.rs"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
proc_macro_aoc = { path = "proc_macro_aoc" }
include_optional = "1.0"
